tests/ui/type-alias-impl-trait/nested_impl_trait_in_assoc_ty.stderr
error[E0792]: non-defining opaque type use in defining scope
  --> $DIR/nested_impl_trait_in_assoc_ty.rs:15:9
   |
LL |         async move { merge_stream(self.mem_table.iter()) }
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ argument `'_` is not a generic parameter
   |
note: for this opaque type
  --> $DIR/nested_impl_trait_in_assoc_ty.rs:35:1
   |
LL | pub(crate) async fn merge_stream<'a>(mem_table_iter: impl Iterator<Item = &'a ()>) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0792`.
